# music-app

./: .editorconfig  .gitignore  README.md  api.md  gradle.properties  release.keystore  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  fingerprint_jni.cpp
app/src/main/kotlin/com/inkwise/music/: MainActivity.kt  MusicApp.kt
app/src/main/kotlin/com/inkwise/music/audio/: AudioAnalyzer.kt  BeatDetector.kt  FingerprintGenerator.kt  FingerprintManager.kt
app/src/main/kotlin/com/inkwise/music/di/: CoilModule.kt  DatabaseModule.kt  LyricsModule.kt  MusicAppEntryPoint.kt
app/src/main/kotlin/com/inkwise/music/player/: BassEngine.kt  (+1 more)
app/src/main/res/drawable/: ic_add.xml  ic_audio_effect.xml  ic_close.xml  ic_desktop_lyrics_open.xml  ic_desktop_lyrics_v2.xml  ic_headphones.xml  ic_hyper_os_close.xml  ic_hyper_os_desktop_lyrics.xml  ic_hyper_os_desktop_lyrics_open.xml  ic_launcher_fg.xml  ic_location.xml  ic_menu.xml  ic_mini_player_pause.xml  ic_mini_player_play.xml  ic_more_vert.xml  ic_multiple_choice.xml  ic_play_queue.xml  ic_player_circle.xml  ic_player_more.xml  ic_player_random.xml  ic_player_repeat_one.xml  ic_playlist_add_24.xml  ic_round_skip_next_24.xml  ic_round_skip_previous_24.xml  ic_search.xml  ic_sleep_timer.xml  ic_sort.xml  ic_tune.xml  ic_upload.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  network_security_config.xml
gradle/: libs.versions.toml
(+87 files in other folders)
